<resources>
    <string name="app_name">DevHub</string>
    <string name="txt_email_login">Email</string>
    <string name="txt_password_login">Password</string>
    <string name="txt_olvida_passwd">Forgot password</string>
    <string name="txt_login_button">Log In</string>
    <string name="txt_register_button">Register</string>
    <string name="txt_psswd_retype">Confirm your password</string>
    <string name="txt_profile_item">Profile</string>
    <string name="txt_Hello">Hello</string>
    <string name="txt_Welcome">Welcome back!</string>
    <string name="txt_temp_user">User</string>
    <string name="btn_coder_mode">Coder Mode</string>
    <string name="btn_post">Post</string>
    <string name="msg_wrong_email">Something wrong with email.</string>
    <string name="msg_wrong_pswd">Something wrong with password.</string>
    <string name="txt_user_name">User Name</string>
    <string name="option_gallery">Gallery</string>
    <string name="option_camera">Camera</string>
    <string name="choice_option">Choice an option</string>
    <string name="msg_wrong_userN">Something wrong with User Name</string>
    <string name="msg_success">Success!</string>
    <string name="duplicateTXTemail">Email already exists</string>
    <string name="badcredentials">Wrong credentials</string>
</resources>