<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2E3239"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="120dp"
        android:layout_marginTop="64dp"
        android:src="@drawable/nanami"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/emailLoginID"
        android:layout_width="280dp"
        android:layout_height="25dp"
        android:layout_marginTop="28dp"
        android:fontFamily="monospace"
        android:text="@string/txt_email_login"
        android:textColor="#FFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/passLoginID"
        android:layout_width="280dp"
        android:layout_height="25dp"
        android:layout_marginTop="16dp"
        android:fontFamily="monospace"
        android:text="@string/txt_password_login"
        android:textColor="#FFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/info_email_login" />

    <EditText
        android:id="@+id/info_email_login"
        android:layout_width="280dp"
        android:layout_height="46dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#FFF"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailLoginID" />

    <EditText
        android:id="@+id/info_passwd_login"
        android:layout_width="280dp"
        android:layout_height="46dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#FFF"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passLoginID" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/txt_olvida_passwd"
        android:textColor="#FFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/info_passwd_login" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="148dp"
        android:text="version"
        android:textColor="#FFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.013"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_Register" />

    <Button
        android:id="@+id/btn_Login"
        android:layout_width="250dp"
        android:layout_height="47dp"
        android:layout_marginTop="44dp"
        android:backgroundTint="#26292B"
        android:text="@string/txt_login_button"
        android:textColor="#fff"
        android:textColorLink="#ffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/info_passwd_login" />

    <Button
        android:id="@+id/btn_Register"
        android:layout_width="250dp"
        android:layout_height="47dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#26292B"
        android:text="@string/txt_register_button"
        android:textColor="#fff"
        android:textColorLink="#ffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_Login" />

</androidx.constraintlayout.widget.ConstraintLayout>