<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:background="#2E3239"
    android:layout_height="match_parent"
    tools:context=".fypMain">

    <View
        android:id="@+id/view"
        android:layout_width="412dp"
        android:layout_height="137dp"
        android:background="#54626264"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="-1dp" />

    <TextView
        android:id="@+id/txt_Hello"
        android:layout_width="46dp"
        android:layout_height="23dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/fira_code_semibold"
        android:text="@string/txt_Hello"
        android:textColor="#FFFF"
        android:textColorLink="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.224"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_emoji"
        android:layout_width="46dp"
        android:layout_height="23dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/fira_code_semibold"
        android:text="👋"
        android:textColor="#FFFF"
        android:textColorLink="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/txt_userName"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_userName"
        android:layout_width="92dp"
        android:layout_height="23dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/fira_code_semibold"
        android:text="@string/txt_temp_user"
        android:textColor="#FFFF"
        android:textColorLink="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.031"
        app:layout_constraintStart_toEndOf="@+id/txt_Hello"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_welcome"
        android:layout_width="313dp"
        android:layout_height="31dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/fira_code_semibold"
        android:text="@string/txt_Welcome"
        android:textColor="#FFFF"
        android:textColorLink="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.826"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_userName" />

    <ImageView
        android:id="@+id/img_User_Registered"
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toStartOf="@+id/txt_Mutiline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:srcCompat="@drawable/nanami" />

    <EditText
        android:id="@+id/txt_Mutiline"
        android:layout_width="289dp"
        android:layout_height="85dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#FFF"
        android:ems="10"
        android:fontFamily="@font/fira_code_semibold"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.672"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <Button
        android:id="@+id/button"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#A2B2EE"
        android:fontFamily="@font/fira_code_semibold"
        android:text="@string/btn_coder_mode"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_Mutiline" />

    <Button
        android:id="@+id/button2"
        android:layout_width="90dp"
        android:layout_height="45dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#A2B2EE"
        android:fontFamily="@font/fira_code_semibold"
        android:text="@string/btn_post"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.039"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/txt_Mutiline" />

    <View
        android:id="@+id/divider"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        android:backgroundTint="#D9D9D9"
        tools:layout_editor_absoluteX="3dp"
        tools:layout_editor_absoluteY="320dp" />

</androidx.constraintlayout.widget.ConstraintLayout>